--- a/user.css
+++ b/user.css
@@ -17,7 +17,7 @@ NAVIGATION BAR
 -------------------
 */
 .Root__nav-bar {
-    background: rgba(var(--spice-rgb-sidebar), 0.3) !important;
+    background: transparent; !important;
     border-radius: 0 !important;
 }
 .main-rootlist-rootlistDividerContainer {
@@ -297,15 +297,16 @@ MAIN VIEW
 */
 .Root__main-view {
     background: none !important;
+    -webkit-mask-image: linear-gradient(transparent 64px, rgba(0, 0, 0, 1) 84px);
 }
 [fade="bottom"] {
-    -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 80%, transparent 100%);
+/*    -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) calc(100% - 20px), transparent 100%);*/
 }
 [fade="top"] {
-    -webkit-mask-image: linear-gradient(transparent 10%, rgba(0, 0, 0, 1) 30%);
+/*    -webkit-mask-image: linear-gradient(transparent 64px, rgba(0, 0, 0, 1) 84px);*/
 }
 [fade="full"] {
-    -webkit-mask-image: linear-gradient(transparent 10%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 1) 80%, transparent 100%);
+/*    -webkit-mask-image: linear-gradient(transparent 64px, rgba(0, 0, 0, 1) 84px, rgba(0, 0, 0, 1) calc(100% - 20px), transparent 100%);*/
 }
 .main-home-homeHeader {
     display: none;
@@ -599,13 +600,13 @@ BACKGROUND ELEMENTS
     bottom: 0;
 }
 .bg-main-shadow {
-    background: linear-gradient(rgba(0, 0, 0, 0.196) 203px, rgba(0, 0, 0, 0.518) 474px, rgba(0, 0, 0, 0.596) 700px) !important;
+    background: rgba(0, 0, 0, 0.7) !important;
     position: absolute;
     width: 100%;
     height: 100%;
 }
 .bg-image-container {
-    -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 0.75) 0px, rgba(0, 0, 0, 0.1) 100%);
+/*    -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 0.75) 0px, rgba(0, 0, 0, 0.1) 100%);*/
     height: 100%;
     width: 100%;
     position: absolute;
