--- a/user.css
+++ b/user.css
@@ -1005,6 +1005,6 @@ RIGHT SIDEBAR
 .main-userWidget-boxCondensed, .main-noConnection-isNotice {
   background: none;
   border-radius: 8px;
-  background-color: rgba(var(--spice-rgb-shadow), 0.7);
+  background-color: rgba(var(--spice-rgb-shadow), 0.7) !important;
   color: rgba(var(--spice-rgb-text), 0.7);
 }
