--- a/user.css
+++ b/user.css
@@ -1047,3 +1047,12 @@ RIGHT SIDEBAR
 .main-buddyFeed-scrollBarContainer {
     border-radius: 12px;
 }
+
+.main-nowPlayingView-content.main-nowPlayingView-gradient {
+    background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,transparent), to(rgba(var(--spice-rgb-shadow), 0.8))) var(--background-base);
+    background: linear-gradient(transparent 0%,rgba(var(--spice-rgb-shadow), 0.8) 100%) var(--background-base);
+}
+
+.main-nowPlayingView-lyricsGradient {
+    max-height: 380px;
+}
