--- a/user.css
+++ b/user.css
@@ -263,8 +263,8 @@ footer.main-nowPlayingBar-container {
     margin-right: 8px;
 }
 
-.volume-bar__slider-container {
-    min-width: 100px;
+.main-nowPlayingBar-volumeBar {
+    min-width: 180px;
 }
 
 .main-nowPlayingBar-left {
@@ -1072,4 +1072,8 @@ RIGHT SIDEBAR
 
 .main-yourLibraryX-listItem p.TypeElement-mesto-textSubdued-type {
     display: none;
+}
+
+.main-topBar-container {
+    padding: 0px;
 }
