--- a/user.css
+++ b/user.css
@@ -1156,3 +1156,7 @@ RIGHT SIDEBAR
 .main-view-container__scroll-node.main-view-container__scroll-node--offset-topbar > .os-scrollbar-vertical {
     margin-bottom: 14px;
 }
+
+.EmeHQXR87mUskYK6xEde {
+    background: none;
+}
