Remove bottom ad div

--- a/user.css
+++ b/user.css
@@ -1175,3 +1175,8 @@ RIGHT SIDEBAR
     height: auto;
     margin-top: 84px;
 }
+
+/*Remove bottom ad*/
+._Cq69xKZBtHaaeMZXIdk {
+    display: none;
+}
