--- a/user.css
+++ b/user.css
@@ -1180,3 +1180,8 @@ RIGHT SIDEBAR
 ._Cq69xKZBtHaaeMZXIdk {
     display: none;
 }
+
+/*Extra padding for search results*/
+.main-shelf-header {
+    margin-top: 32px;
+}
