Removed colours from artist and album pages

--- a/user.css
+++ b/user.css
@@ -1190,3 +1190,27 @@ RIGHT SIDEBAR
 .main-shelf-header {
     margin-top: 32px;
 }
+
+.main-yourLibraryX-libraryContainer {
+    background-color: unset;
+}
+
+.undefined {
+    display: none;
+}
+
+.AAdBM1nhG73supMfnYX7 {
+    border-radius: 8px;
+}
+
+.Bdcf5g__Rug3TGqSdbiy {
+    display: none;
+}
+
+.wozXSN04ZBOkhrsuY5i2.dhq75ObRGjfBoBlz6clW {
+    display: none;
+}
+
+.XVz4BMGP5zAEE5p90mYK {
+    display: none;
+}
